// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Headings />:  size props === [7px, sectionHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 7px;
  font-weight: 700;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    line-height: 1.61803398875;
  }
}

<h6
  class="c0"
  font-size="7px,24px"
  font-weight="bold"
/>
`;

exports[`Test <Headings />:  size props === [body, sectionHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.61803398875;
  font-weight: 700;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    line-height: 1.61803398875;
  }
}

<h6
  class="c0"
  font-size="14px,24px"
  font-weight="bold"
/>
`;

exports[`Test <Headings />:  size props === bodyHeading works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 16px;
  line-height: 1.61803398875;
  font-weight: 700;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<h5
  class="c0"
  font-size="16px"
  font-weight="bold"
/>
`;

exports[`Test <Headings />:  size props === heroHeading works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 64px;
  line-height: 1.3;
  font-weight: 700;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<h1
  class="c0"
  font-size="64px"
  font-weight="bold"
/>
`;

exports[`Test <Text />:  size props === [7px, sectionHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 7px;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    line-height: 1.61803398875;
  }
}

<div
  class="c0"
  font-size="7px,24px"
/>
`;

exports[`Test <Text />:  size props === [body, sectionHeading] with noDefaultLineHeight works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

<div
  class="c0"
  font-size="14px,24px"
/>
`;

exports[`Test <Text />:  size props === [body, sectionHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.61803398875;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    line-height: 1.61803398875;
  }
}

<div
  class="c0"
  font-size="14px,24px"
/>
`;

exports[`Test <Text />:  size props === [heroHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.61803398875;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<div
  class="c0"
  font-size="14px"
/>
`;

exports[`Test <Text />:  size props === 7px works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 7px;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<div
  class="c0"
  font-size="7px"
/>
`;

exports[`Test <Text />:  size props === heroHeading works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.61803398875;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<div
  class="c0"
  font-size="14px"
/>
`;
